--- a/src/common/sass/reset.sass
+++ b/src/common/sass/reset.sass
@@ -1,7 +1,7 @@
 body,h1,h3
 	margin: 0
 body
-  overflow: hidden
+  // overflow: hidden
   font-family: "微软雅黑"
 ul
 	margin: 0
@@ -23,4 +23,6 @@ dl
 	list-style: none
 dd
 	margin: 0
-
+::-webkit-scrollbar
+  width: 0
+  height: 0
